# fast-api-orm-supabase

./: pyproject.toml
scripts/: youtube_downloader.py
src/: main.py
src/alembic/versions/: 2025_09_03_2042-34fcf60027e9_add_user_id_to_example_table.py
src/app/api/: __init__.py  auth.py
src/app/config/: db.py  logging.py  settings.py  supabase_client.py
src/app/middlewares/: auth.py
src/app/schemas/: example.py
