[project]
name = "fast-api-orm-supabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.2",
    "alembic-postgresql-enum>=1.7.0",
    "fastapi>=0.115.12",
    "psycopg>=3.2.9",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "sqlalchemy[asyncio]>=2.0.41",
    "mypy>=1.17.1",
    "supabase>=2.18.1",
    "uvicorn>=0.35.0",
    "pytube>=15.0.0",
    "yt-dlp>=2025.8.27",
]

[tool.ruff]
line-length = 88
target-version = "py312"
select = ["E", "F", "I"]
ignore = []
fixable = ["ALL"]
unfixable = []
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "src/alembic",
]


[tool.ruff.isort]
known-first-party = ["src"]

[tool.pyright]
typeCheckingMode = "off"
reportMissingImports = true
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src"]
ignore = ["**/typings"]
exclude = [
    ".*",
    "__*",
    "**/typings",
]
reportMissingTypeStubs = false


[tool.mypy]
mypy_path = "src"
